[package]
name = "ketchup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
ureq = { version = "3.0", features = ["json"] }
warp = "0.3"

[[bin]]
name = "ketchup"
path = "src/bin/main.rs"
