[package]
name = "catchup"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4.11"
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
juniper = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ureq = { version = "3.0", features = ["json"] }

[[bin]]
name = "catchup"
path = "src/bin/main.rs"
